feat: add OAuth2 resource server dependency and enhance Post and Theme tests with additional assertions